{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 422,
  "lineage": "ac651065-29eb-89b9-d18e-fe3b56a4885b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops-test-1stproject-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:internet-gateway/igw-011f11a986f6dab93",
            "id": "igw-011f11a986f6dab93",
            "owner_id": "339713125387",
            "tags": {
              "Name": "devops-test-1stproject-igw"
            },
            "tags_all": {
              "Name": "devops-test-1stproject-igw"
            },
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "devops-test-1stproject-acl-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:network-acl/acl-0b9b146fd79ecf3ba",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b9b146fd79ecf3ba",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "339713125387",
            "subnet_ids": [
              "subnet-0445cd01bbd73a3cd",
              "subnet-0e1a5bf49c906584f"
            ],
            "tags": {
              "Name": "devops-test-1stproject-acl-private"
            },
            "tags_all": {
              "Name": "devops-test-1stproject-acl-private"
            },
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "devops-test-1stproject-acl-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:network-acl/acl-0e79654dc9c91d1f8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e79654dc9c91d1f8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "339713125387",
            "subnet_ids": [
              "subnet-05a7c6086f4fb07cf",
              "subnet-0a3cbde24b9b48585"
            ],
            "tags": {
              "Name": "devops-test-1stproject-acl-public"
            },
            "tags_all": {
              "Name": "devops-test-1stproject-acl-public"
            },
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "devops-test-1stproject-acl-association-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-05a944042272d418a",
            "network_acl_id": "acl-0b9b146fd79ecf3ba",
            "subnet_id": "subnet-0e1a5bf49c906584f"
          },
          "dependencies": [
            "aws_network_acl.devops-test-1stproject-acl-private",
            "aws_subnet.devops-test-1stproject-subnet-private-1",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "devops-test-1stproject-acl-association-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-079a0d58c18f2c33f",
            "network_acl_id": "acl-0b9b146fd79ecf3ba",
            "subnet_id": "subnet-0445cd01bbd73a3cd"
          },
          "dependencies": [
            "aws_network_acl.devops-test-1stproject-acl-private",
            "aws_subnet.devops-test-1stproject-subnet-private-2",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "devops-test-1stproject-acl-association-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0ee334eb29c20c52c",
            "network_acl_id": "acl-0e79654dc9c91d1f8",
            "subnet_id": "subnet-0a3cbde24b9b48585"
          },
          "dependencies": [
            "aws_network_acl.devops-test-1stproject-acl-public",
            "aws_subnet.devops-test-1stproject-subnet-public-1",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "devops-test-1stproject-acl-association-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0ab60178dacfaa116",
            "network_acl_id": "acl-0e79654dc9c91d1f8",
            "subnet_id": "subnet-05a7c6086f4fb07cf"
          },
          "dependencies": [
            "aws_network_acl.devops-test-1stproject-acl-public",
            "aws_subnet.devops-test-1stproject-subnet-public-2",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "devops-test-1stproject-acl-rule-private-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-725160924",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b9b146fd79ecf3ba",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.devops-test-1stproject-acl-private",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "devops-test-1stproject-acl-rule-private-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3566232689",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b9b146fd79ecf3ba",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.devops-test-1stproject-acl-private",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "devops-test-1stproject-acl-rule-public-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1586564697",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e79654dc9c91d1f8",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.devops-test-1stproject-acl-public",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "devops-test-1stproject-acl-rule-public-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1228389315",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e79654dc9c91d1f8",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.devops-test-1stproject-acl-public",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "devops-test-1stproject-rt-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-011f11a986f6dab93",
            "id": "r-rtb-0ba33f9521391531b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ba33f9521391531b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops-test-1stproject-igw",
            "aws_route_table.devops-test-1stproject-rtb-public",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops-test-1stproject-rtb-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:route-table/rtb-0dce9fb33b62e5e77",
            "id": "rtb-0dce9fb33b62e5e77",
            "owner_id": "339713125387",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops-test-1stproject-rtb-private"
            },
            "tags_all": {
              "Name": "devops-test-1stproject-rtb-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops-test-1stproject-rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:route-table/rtb-0ba33f9521391531b",
            "id": "rtb-0ba33f9521391531b",
            "owner_id": "339713125387",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011f11a986f6dab93",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-test-1stproject-rtb-public"
            },
            "tags_all": {
              "Name": "devops-test-1stproject-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops-test-1stproject-rtb-private-associate-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f80af22868f5b6e",
            "route_table_id": "rtb-0dce9fb33b62e5e77",
            "subnet_id": "subnet-0e1a5bf49c906584f"
          },
          "dependencies": [
            "aws_route_table.devops-test-1stproject-rtb-private",
            "aws_subnet.devops-test-1stproject-subnet-private-1",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops-test-1stproject-rtb-private-associate-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad474fcf6450f18e",
            "route_table_id": "rtb-0dce9fb33b62e5e77",
            "subnet_id": "subnet-0445cd01bbd73a3cd"
          },
          "dependencies": [
            "aws_route_table.devops-test-1stproject-rtb-private",
            "aws_subnet.devops-test-1stproject-subnet-private-2",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops-test-1stproject-rtb-public-associate-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e86bfb0613ca4f1",
            "route_table_id": "rtb-0ba33f9521391531b",
            "subnet_id": "subnet-0a3cbde24b9b48585"
          },
          "dependencies": [
            "aws_route_table.devops-test-1stproject-rtb-public",
            "aws_subnet.devops-test-1stproject-subnet-public-1",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops-test-1stproject-rtb-public-associate-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0641586afce42fc85",
            "route_table_id": "rtb-0ba33f9521391531b",
            "subnet_id": "subnet-05a7c6086f4fb07cf"
          },
          "dependencies": [
            "aws_route_table.devops-test-1stproject-rtb-public",
            "aws_subnet.devops-test-1stproject-subnet-public-2",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-test-1stproject-sg-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:security-group/sg-0615555ae597d4144",
            "description": "Security Group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP access to Webserver",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fef8cc6c3607c449"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "id": "sg-0615555ae597d4144",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access from Anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS access from Anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-test-1stproject-sg-alb",
            "name_prefix": "",
            "owner_id": "339713125387",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-test-1stproject-sg-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:security-group/sg-0a707c504e33ddda4",
            "description": "Security Group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a707c504e33ddda4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops-test-1stproject-sg-bastion",
            "name_prefix": "",
            "owner_id": "339713125387",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-test-1stproject-sg-database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:security-group/sg-09da29a0b706a8c64",
            "description": "Security Group for Databse",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow All traffic to Self",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-09da29a0b706a8c64",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALL traffic from Self",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow connection from Web Server",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fef8cc6c3607c449"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "devops-test-1stproject-sg-database",
            "name_prefix": "",
            "owner_id": "339713125387",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-test-1stproject-sg-elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:security-group/sg-066a540353992f1e1",
            "description": "Security Group for Elasticache",
            "egress": [],
            "id": "sg-066a540353992f1e1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow connection from Web Server",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fef8cc6c3607c449"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "devops-test-1stproject-sg-elasticache",
            "name_prefix": "",
            "owner_id": "339713125387",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-test-1stproject-sg-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:security-group/sg-0fef8cc6c3607c449",
            "description": "Security Group for Web Server",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow connect to Database",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0fef8cc6c3607c449",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP access from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0615555ae597d4144"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH access from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a707c504e33ddda4"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH access from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0a707c504e33ddda4"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH access from Self",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "devops-test-1stproject-sg-webserver",
            "name_prefix": "",
            "owner_id": "339713125387",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-elasticache-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow connection from Web Server",
            "from_port": 6379,
            "id": "sgrule-2415333992",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-066a540353992f1e1",
            "security_group_rule_id": "sgr-0a96a35a9586a43ac",
            "self": false,
            "source_security_group_id": "sg-0fef8cc6c3607c449",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-elasticache",
            "aws_security_group.devops-test-1stproject-sg-webserver",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-alb-http-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP access to Webserver",
            "from_port": 3000,
            "id": "sgrule-2357918909",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0615555ae597d4144",
            "security_group_rule_id": "sgr-0d6bbe360729d1468",
            "self": false,
            "source_security_group_id": "sg-0fef8cc6c3607c449",
            "timeouts": null,
            "to_port": 3000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-alb",
            "aws_security_group.devops-test-1stproject-sg-webserver",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-alb-http-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP access from Anywhere",
            "from_port": 80,
            "id": "sgrule-3287412135",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0615555ae597d4144",
            "security_group_rule_id": "sgr-01eb99f109b35bd7e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-alb",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-alb-https-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS access from Anywhere",
            "from_port": 443,
            "id": "sgrule-2581468648",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0615555ae597d4144",
            "security_group_rule_id": "sgr-0a351a2383935d6d2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-alb",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-bastion-ssh-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow All traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-2250219490",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a707c504e33ddda4",
            "security_group_rule_id": "sgr-07e35f2b8aea55047",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-bastion",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-bastion-ssh-ingress-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH access from anywhere",
            "from_port": 22,
            "id": "sgrule-1494927419",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a707c504e33ddda4",
            "security_group_rule_id": "sgr-02eb24427f537dc0d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-bastion",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-bastion-ssh-ingress-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH access from anywhere",
            "from_port": 22,
            "id": "sgrule-668281507",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a707c504e33ddda4",
            "security_group_rule_id": "sgr-0f606e17a5949e88a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-bastion",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-database-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow connection from Web Server",
            "from_port": 3306,
            "id": "sgrule-4271602469",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09da29a0b706a8c64",
            "security_group_rule_id": "sgr-0506f3a4ce787fef3",
            "self": false,
            "source_security_group_id": "sg-0fef8cc6c3607c449",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-database",
            "aws_security_group.devops-test-1stproject-sg-webserver",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-database-self-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow All traffic to Self",
            "from_port": 0,
            "id": "sgrule-913113539",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09da29a0b706a8c64",
            "security_group_rule_id": "sgr-0d3f7066cef8cf07a",
            "self": false,
            "source_security_group_id": "sg-09da29a0b706a8c64",
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-database",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-database-self-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALL traffic from Self",
            "from_port": 0,
            "id": "sgrule-3961790001",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09da29a0b706a8c64",
            "security_group_rule_id": "sgr-0d3f7066cef8cf07a",
            "self": false,
            "source_security_group_id": "sg-09da29a0b706a8c64",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-database",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-webserver-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow connect to Database",
            "from_port": 0,
            "id": "sgrule-1594267509",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fef8cc6c3607c449",
            "security_group_rule_id": "sgr-0fbc749d9cbec143d",
            "self": false,
            "source_security_group_id": "sg-0fef8cc6c3607c449",
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-elasticache",
            "aws_security_group.devops-test-1stproject-sg-webserver",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-webserver-http-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP access from ALB",
            "from_port": 3000,
            "id": "sgrule-1035228210",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fef8cc6c3607c449",
            "security_group_rule_id": "sgr-0878ce38307099339",
            "self": false,
            "source_security_group_id": "sg-0615555ae597d4144",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-alb",
            "aws_security_group.devops-test-1stproject-sg-webserver",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-webserver-self-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH access from Self",
            "from_port": 0,
            "id": "sgrule-1221899886",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fef8cc6c3607c449",
            "security_group_rule_id": "sgr-054370e390601196d",
            "self": false,
            "source_security_group_id": "sg-0fef8cc6c3607c449",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-webserver",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-webserver-ssh-ingress-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH access from Bastion",
            "from_port": 22,
            "id": "sgrule-1957519063",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fef8cc6c3607c449",
            "security_group_rule_id": "sgr-067b7f374ef53f4be",
            "self": false,
            "source_security_group_id": "sg-0a707c504e33ddda4",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-bastion",
            "aws_security_group.devops-test-1stproject-sg-webserver",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devops-test-1stproject-sg-rule-webserver-ssh-ingress-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH access from Bastion",
            "from_port": 22,
            "id": "sgrule-3505585464",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0fef8cc6c3607c449",
            "security_group_rule_id": "sgr-042a4f09b3d03103e",
            "self": false,
            "source_security_group_id": "sg-0a707c504e33ddda4",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devops-test-1stproject-sg-bastion",
            "aws_security_group.devops-test-1stproject-sg-webserver",
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-test-1stproject-subnet-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:subnet/subnet-0e1a5bf49c906584f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1a5bf49c906584f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713125387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-test-1stproject-subnet-private1"
            },
            "tags_all": {
              "Name": "devops-test-1stproject-subnet-private1"
            },
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-test-1stproject-subnet-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:subnet/subnet-0445cd01bbd73a3cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0445cd01bbd73a3cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713125387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-test-1stproject-subnet-private2"
            },
            "tags_all": {
              "Name": "devops-test-1stproject-subnet-private2"
            },
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-test-1stproject-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:subnet/subnet-0a3cbde24b9b48585",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3cbde24b9b48585",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713125387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-test-1stproject-subnet-public1"
            },
            "tags_all": {
              "Name": "devops-test-1stproject-subnet-public1"
            },
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-test-1stproject-subnet-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:subnet/subnet-05a7c6086f4fb07cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a7c6086f4fb07cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713125387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-test-1stproject-subnet-public2"
            },
            "tags_all": {
              "Name": "devops-test-1stproject-subnet-public2"
            },
            "vpc_id": "vpc-0290139d254f2a866"
          },
          "dependencies": [
            "aws_vpc.devops-test-1stproject-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops-test-1stproject-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713125387:vpc/vpc-0290139d254f2a866",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025262f2c244c5708",
            "default_route_table_id": "rtb-09025d3125691b50b",
            "default_security_group_id": "sg-044e2d01f5f03353f",
            "dhcp_options_id": "dopt-01083998c9e93b1c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0290139d254f2a866",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09025d3125691b50b",
            "owner_id": "339713125387",
            "tags": {
              "Name": "devops-test-1stproject-vpc",
              "Owner": "VThang"
            },
            "tags_all": {
              "Name": "devops-test-1stproject-vpc",
              "Owner": "VThang"
            }
          }
        }
      ]
    }
  ]
}